--- a/src/index.css
+++ b/src/index.css
@@ -18,14 +18,16 @@ code {
 
 .c-card-image {
   border-radius: 10px;
-  width: 300px;
-  height: 480px;
-  box-shadow: 0px 0px 3px 1px #ccc;
+  width: 320x;
+  height: 400px;
+  box-shadow: 0px 0px 3px 1px #000000;
 }
 
 .c-card-info {
   font-size: 10px;
   margin: 100px;
+  box-shadow: 0px 0px 3px 1px #000000;
+  padding: 5px;
 }
 
 .c-card-title {
