--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 10;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,39 +13,34 @@ code {
 }
 
 .c-card {
-  margin:20px;
+  margin: 55px;
 }
 
 .c-card-image {
-  border-radius: 10px;
-  width: 320x;
-  height: 400px;
+  border-radius: 20px;
+  width: 300x;
+  height: 300px;
   box-shadow: 0px 0px 3px 1px #000000;
 }
 
 .c-card-info {
-  font-size: 10px;
-  margin: 100px;
+  font-size: 20px;
+  margin: 10px;
   box-shadow: 0px 0px 3px 1px #000000;
   padding: 5px;
 }
 
 .c-card-title {
   font-size: 24px;
-  margin: 0px;
+  margin: 15px;
 }
 
 .c-card-sub-title {
-  font-size: 16px;
-  margin: 0px;
+  font-size: 20px;
+  margin: 10px;
 }
 
-.success-msg {
-  color: #57A773;
-  padding: 10px 15px;
-}
-
-.err-msg {
-  color: #EE6352;
-  padding: 10px 15px;
+.c-card-role {
+  font-size: 20px;
+  margin: 10px;
 }
